--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -22,6 +22,11 @@
 }
 
 
+#Profile-Info h2{ /*Name */
+    text-align: center;
+}
+
+
 
 #Profile-Info p{
 
@@ -43,6 +48,9 @@
     width: 40%;
     margin-left: 30%;
 }
+
+
+
 
 .Tweets :nth-child(2){
 
