--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,15 @@
+<!DOCTYPE html>
+
+<head>
+
+    <title>Sign Up</title>
+    <script type="text/javascript" src= "/assets/scripts/ValidateAcct.js"></script>
+
+</head>
 
 
 
-<form id ="Signup-form" action = "/signup" method = "post">
+<form id ="Signup-form" action = "/signup" method = "post" onsubmit="test()" >
 
 <p>First Name: </p>   
 <input type ="text" name = "firstname">
