--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,38 +9,123 @@
 
 
 
-<form id ="Signup-form" action = "/signup" method = "post" onsubmit="test()" >
+<form id ="Signup-form" action = "/signup" method = "post" onsubmit="return ValidateAll()" >
 
 <p>First Name: </p>   
-<input type ="text" name = "firstname">
+<input type ="text" name = "firstname" id ="firstname" onchange = "Validate(this)" required>
+<p id = "fname_err" class = "ErrMsg"></p>
 
 <p>Last Name: </p>
-<input type ="text" name = "lastname">
+<input type ="text" name = "lastname" id ="lastname"  onchange = "Validate(this)" required>
+<p id = "lname_err" class = "ErrMsg"></p>
+
 
 <p>Email: </p>
-<input type ="text" name = "email">
+<input type ="text" name = "email" id ="email" onchange = "Validate(this)" required>
+<p id = "email_err" class = "ErrMsg"></p>
+
 
 <p>Confirm email: </p>
-<input type ="text" name = "confirm_email">
-
+<input type ="text" name = "confirm_email" id ="confirm_email" onchange = "Validate(this)" required>
+<p id = "con_email_err" class = "ErrMsg"></p>
 
 <p>Date of birth: </p>
-<input type ="text" name = "date_of_birth">
+<input type ="date" name = "date_of_birth" id ="date_of_birth" required>
+<p id = "dob_err" class = "ErrMsg"></p>
 
-<p>Province/State</p>
-<input type ="text" name = "province">
 
 <p>Country</p>
-<input type ="text" name = "country">
+<select name = "country" required>
+	
+	<option value="CA">Canada</option>
+	<option value="US">United States</option>
+
+</select>
+
+<p>Province/State</p>
+<select name="province" required>
+    <option value="" selected="selected"> - Province - </option>
+    <option value="AB">Alberta</option>
+    <option value="BC">British Columbia</option>
+    <option value="MB">Manitoba</option>
+    <option value="NB">New Brunswick</option>
+    <option value="NL">Newfoundland and Labrador</option>
+    <option value="NS">Nova Scotia</option>
+    <option value="NT">Northwest Territories</option>
+    <option value="NU">Nunavut</option>
+    <option value="ON">Ontario</option>
+    <option value="PE">Prince Edward Island</option>
+    <option value="QC">Quebec</option>
+    <option value="SK">Saskatchewan</option>
+    <option value="YT">Yukon</option>
+    <option value=""> - States - </option>
+    <option value="AL">Alabama</option> 
+    <option value="AK">Alaska</option> 
+    <option value="AZ">Arizona</option> 
+    <option value="AR">Arkansas</option> 
+    <option value="CA">California</option> 
+    <option value="CO">Colorado</option> 
+    <option value="CT">Connecticut</option> 
+    <option value="DE">Delaware</option> 
+    <option value="DC">District Of Columbia</option> 
+    <option value="FL">Florida</option> 
+    <option value="GA">Georgia</option> 
+    <option value="HI">Hawaii</option> 
+    <option value="ID">Idaho</option> 
+    <option value="IL">Illinois</option> 
+    <option value="IN">Indiana</option> 
+    <option value="IA">Iowa</option> 
+    <option value="KS">Kansas</option> 
+    <option value="KY">Kentucky</option> 
+    <option value="LA">Louisiana</option> 
+    <option value="ME">Maine</option> 
+    <option value="MD">Maryland</option> 
+    <option value="MA">Massachusetts</option> 
+    <option value="MI">Michigan</option> 
+    <option value="MN">Minnesota</option> 
+    <option value="MS">Mississippi</option> 
+    <option value="MO">Missouri</option> 
+    <option value="MT">Montana</option> 
+    <option value="NE">Nebraska</option> 
+    <option value="NV">Nevada</option> 
+    <option value="NH">New Hampshire</option> 
+    <option value="NJ">New Jersey</option> 
+    <option value="NM">New Mexico</option> 
+    <option value="NY">New York</option> 
+    <option value="NC">North Carolina</option> 
+    <option value="ND">North Dakota</option> 
+    <option value="OH">Ohio</option> 
+    <option value="OK">Oklahoma</option> 
+    <option value="OR">Oregon</option> 
+    <option value="PA">Pennsylvania</option> 
+    <option value="RI">Rhode Island</option> 
+    <option value="SC">South Carolina</option> 
+    <option value="SD">South Dakota</option> 
+    <option value="TN">Tennessee</option> 
+    <option value="TX">Texas</option> 
+    <option value="UT">Utah</option> 
+    <option value="VT">Vermont</option> 
+    <option value="VA">Virginia</option> 
+    <option value="WA">Washington</option> 
+    <option value="WV">West Virginia</option> 
+    <option value="WI">Wisconsin</option> 
+    <option value="WY">Wyoming</option>
+</select>
+
+
+<p id = "country_err" class = "ErrMsg"></p>
 
 <p>Username:</p>
-<input type ="text" name = "username">
+<input type ="text" name = "username" id ="username" onchange = "Validate(this)"required>
+<p id = "username_err" class = "ErrMsg"></p>
 
 <p>Password:</p>
-<input type ="text" name = "password">
+<input type ="text" name = "password" id ="password" onchange = "Validate(this)" required>
+<p id = "pass_err" class = "ErrMsg"></p>
 
 <p>Confirm Password:</p>
-<input type ="text" name = "Confirmpassword">
+<input type ="text" name = "Confirmpassword" id ="Confirmpassword" onchange = "Validate(this)" required>
+<p id = "con_pass_err" class = "ErrMsg"></p>
 
 <input type = "submit" value = "Submit">
 
